Refactor LoreUtils * Rename LoreUtils to DisplayUtils * Add lore to useful block states items, change name color and add some new items